--- a/app/views/user_mailer/confirmation_instructions.text.erb
+++ b/app/views/user_mailer/confirmation_instructions.text.erb
@@ -1,7 +1,9 @@
-You can confirm your email change by copying-and-pasting the link below into your browser's URL bar:
+You can confirm the email change through the link below:
 
-<%= confirmation_url(@resource, :confirmation_token => @token) %>
+<%= confirmation_url(@user, :confirmation_token => @token) %>
 
 If you believe this has reached you in error, please ignore this email.
+
 Until you follow the link above, your registered address will be unchanged.
+
 The link will be valid for two weeks.
